# infer

./: BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
src/: backend.rs  chat_template.rs  discovery.rs  error.rs  lib.rs  llama_backend.rs  manifest.rs  mock_backend.rs  registry.rs
src/backend/: llama.rs  mod.rs
